--- a/src/style.css
+++ b/src/style.css
@@ -113,8 +113,8 @@ footer{
 }
 
 .dotsMenu{
-    /*display: flex;*/
-    display: none;
+    display: flex;
+    /*display: none;*/
     flex-direction: column;
     z-index: 10;
     position: relative;
